--- a/standard.css
+++ b/standard.css
@@ -1,86 +1,77 @@
+/*.navbar-brand{
+	text-align:center;
+	color:yellow;
+}*/
 body{
-	background:rgb(25, 1, 28);
-}
-.Displayresult
-{
-	margin: 0px 15px 5px 15px;
-	width: 250px;
-	height:50px;
-	border-bottom-left-radius: 20%;
-	border-bottom-right-radius: 20%;
-	border:none;
-	text-align:right;
-	font-size:40px;
-	letter-spacing: 4px;
-	font-family:Lobster;
-	font-style: bolder;
-	background:rgb(66, 64, 64);
-	color:rgb(245, 243, 122);
-}
-.Displaytext{
-	margin: 20px 15px 0px 15px;
-	width: 250px;
-	height:20px;
-	border:none;
-	border-top-right-radius: 20%;
-	border-top-left-radius: 20%;
-	text-align:right;
-	font-size:10px;
-	letter-spacing: 4px;
-	font-family:Lobster;
-	font-style: italic;
-	background:rgb(66, 64, 64);
-	color:rgb(245, 243, 122);
+	position: relative;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
-.stan_bdy{
-	width:100px;
-	height:100px;
-	margin:0px 15px 10px 15px;
-	border:none;
-	//border:inset;
-}
-.Calculator{
-	width:290px;
-	height:470px;
-	border:outset;
-	border-color: white;
-	margin:auto;
-	margin-top: 80px;
-	position:relative;
-	background:rgb(242, 87, 123);
-}
-.head{
- 	width:98px;
- 	height:30px;
- 	margin:20px 15px 0px 15px;
- 	
-}
-#btn1{
-	border:none;
-	width:39px;
-	height:28px;
-	font-size:100%;
-	font-family:Satisfy;
-	color: rgb(237, 9, 62);
-	border-radius: 70%;
-}
-#btn1:hover{
-	color:white;
-	background: rgb(237, 9, 62);
-}
-#btn{
-	border:none;
-	width:61px;
-	height:45px;
-	font-family:Satisfy;
+.navbar-brand ,.nav-item{
 	font-weight: bolder;
-	font-size:175%;
-	color:rgb(245, 43, 7);
-	border-radius: 20%;
+	font-family: 'Satisfy',Monospace!important;
+	margin: auto;
 }
-#btn:hover{
-	color:white;
-	background:rgb(245, 43, 7); 
+h2{
+	margin-bottom: 0;
+	font-family: 'Lobster';
+	color: #4B515D;
+}
+#Standard .table-responsive-sm{
+	display: block;
+	overflow-x:auto !important;
+	white-space: nowrap;
+	border: 0;
+	margin:20%;
+	padding:20%;
+	font-family: 'Lobster';
+	font-weight: bolder;
 }
 
+#Scientific .table-responsive{
+	//display: block;
+	overflow-x: auto !important;
+	//white-space: nowrap;
+	border: 0;
+	margin:20%;
+
+	padding:10%;
+	font-family: 'Lobster';
+	font-weight: bolder;
+
+}
+/*.row{
+	align-items: center;
+}*/
+#Standard #inputlg{
+	margin-top: 0;
+	width:240px;
+	height: 50px;
+	background:#4B515D;
+}
+
+#Scientific #inputlg{
+	margin-top: 0;
+	width:420px;
+	height: 80px;
+	background:#4B515D;
+}
+
+input[type="button"]
+{
+	width:50px;
+	height:50px;
+	margin: none;
+	align-content: center;
+	max-width: 100%;
+}
+#Standard #equate{
+	width:110px;
+	max-width: 100%;
+}
+
+#Scientific #equate{
+	width:270px;
+	max-width: 100%;
+}
